--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "incenteavized",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "commonjs",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "repository": {
+    "type": "git"
+    "url": "https://github.com/cracksteady/incenteavized.git"
   },
   "dependencies": {
     "@nomiclabs/hardhat-waffle": "^2.0.5",
